--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,45 @@
-.header{display:flex;justify-content:space-between}/*# sourceMappingURL=style.css.map */
+* {
+    margin: 0;
+}
+
+.header {
+    justify-content:space-between;
+    float:right;
+}/*# sourceMappingURL=style.css.map */
+
+body {
+    display: flex;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-size: 18px;
+}
+
+.pic { 
+    position:relative;
+    border:1px solid red;
+    width:100%;
+    height:100vh;
+    overflow:hidden;
+}
+
+.kart {
+    z-index: 1;
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);   
+}
+
+.logo {
+    z-index: 2;
+    position:absolute;
+    padding-top: 20px;
+    padding-left: 20px;
+}
+
+.text {
+    box-sizing: border-box;
+    position:absolute;
+    z-index: 2;
+    
+}
