--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 .header {
     justify-content:space-between;
     float:right;
+    background-color: #DFDFDF;
 }/*# sourceMappingURL=style.css.map */
 
 body {
@@ -12,6 +13,14 @@ body {
     font-family: 'Roboto';
     font-style: normal;
     font-size: 18px;
+}
+
+h3 {
+    text-align: center;
+}
+
+.spisok {   
+    text-align: justify;
 }
 
 .pic { 
@@ -42,4 +51,11 @@ body {
     position:absolute;
     z-index: 2;
     
+}
+
+#print {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 40px 40px 40px 40px;
 }
