--- a/css/style.css
+++ b/css/style.css
@@ -1,61 +1,112 @@
-* {
+html {
+    box-sizing: border-box;
+    font-size: 16px;
+  }
+  
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+  
+  body, h1, h2, h3, h4, h5, h6, p, ol, ul {
     margin: 0;
-}
+    padding: 0;
+    font-weight: normal;
+  }
+  
+  ol, ul {
+    list-style: none;
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 
-.header {
-    justify-content:space-between;
-    float:right;
-    background-color: #DFDFDF;
-}/*# sourceMappingURL=style.css.map */
-
-body {
+  .header {
+    position: absolute;
+    left: 0;
+    top: 0;
     display: flex;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-size: 18px;
-}
+    justify-content: space-between;
+    width: 100%;
+    background-color: transparent;
+    height: 90px;
+  }
 
-h3 {
-    text-align: center;
-}
-
-.spisok {   
-    text-align: justify;
-}
-
-.pic { 
-    position:relative;
-    border:1px solid red;
-    width:100%;
-    height:100vh;
-    overflow:hidden;
-}
-
-.kart {
-    z-index: 1;
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);   
-}
-
-.logo {
-    z-index: 2;
-    position:absolute;
+  .header_logo {
     padding-top: 20px;
     padding-left: 20px;
-}
-
-.text {
-    box-sizing: border-box;
-    position:absolute;
+    width: 50px;
+    height: 50px;
     z-index: 2;
-    
-}
+  }
 
-#print {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 40px 40px 40px 40px;
-}
+  .header_nav {
+    padding-top: 32px;
+    padding-right: 90px;
+    z-index: 2;
+  }
+
+  .header_nav_b1 {
+    padding-right: 50px;
+    color: black; 
+    cursor: pointer; 
+  }
+
+  .header_nav_b2 {
+    border: none;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .block {
+    display: flex;
+  }
+
+  .block_left {
+    width: 1027px;
+  }
+
+  .block_left_window {
+    position: relative;
+  }
+  
+  .block_left_window_text {
+    position: absolute;
+    text-align: justify;
+    top: 200px;
+    left: 600px;
+    width: 225px;
+    height: 185px;
+    color: white;
+  }
+
+  .block_right {
+    background: #DFDFDF;
+    width: 480px;
+  }
+
+  .block_right_text {
+    text-align: center;
+    padding-top: 97px;
+    padding-left: 35px;
+    padding-right: 35px;
+    margin-bottom: 35px;
+  }
+
+  .block_right_list {
+    padding-left: 35px;
+    padding-right: 35px;
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  .bike {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
